# RedSocial

./: CMakeLists.txt  RedSocial.cpp  RedSocial.h  mainwindow.cpp
RedSocial/: CMakeLists.txt  main.cpp
